# Weather-forecast

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt
lib/controller/: CMakeLists.txt  controller.cpp  controller.h
lib/model/: CMakeLists.txt  model.cpp  model.h
lib/view/: CMakeLists.txt  view.cpp  view.h
